Updete User model, controller & swagger
