# controllers/user.controller.js
@@ -3,7 +3,7 @@ const models = require('../models');
 exports.users = async function(req, res, next) {
     try {
         const users = await models.User.findAll({
-            attributes: ['username', 'email']
+            attributes: ['id', 'username', 'email', 'role_id']
         });
         res.status(200).json(users);
     } catch (error) {
